数据库测试

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 8800
 
 govion:
-  host: 172.16.10.7:3308
-  database: goinfo
+  host: localhost:3308
+  database: gobrain
   username: root
   password: 123456
