--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,11 @@ spring:
     url: jdbc:mysql://${govion.host}/${govion.database}?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
     username: ${govion.username}
     password: ${govion.password}
+  sql:
+    init:
+      data-locations: classpath:data.sql,classpath:data-change.sql
+      mode: always
+      separator: ;;
 logging:
   config: classpath:log4j2.xml
 
